# dp_tools

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  check_columns.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: docs.yml
dp-tools/: main.py  pyproject.toml
dp_tools/: __init__.py  plugin_api.py
dp_tools/GLOpenAPI/: __init__.py
dp_tools/assays/rnaseq/: raw_reads.py
dp_tools/bulkRNASeq/: checks.py  vv_protocols.py
dp_tools/cli/: __init__.py  main.py  vv.py
dp_tools/components/: _components.py
dp_tools/config/: amplicon_v0.yaml  amplicon_vLatest.yaml  amplicon_v_Latest.yaml  interface.py  metagenomics_v1.yaml  metagenomics_vLatest.yaml  schemas.py
dp_tools/core/: check_model.py  configuration.py  entity_model.py  loaders.py  model_commons.py  post_processing.py
dp_tools/core/files/: isa_archive.py
dp_tools/core/utilites/: multiqc_tools.py
dp_tools/glds_api/: commons.py  isa.py
dp_tools/scripts/: __init__.py  convert.py  isa_cli.py  osd_api_cli.py  top_level_cli.py  vv_interface.py
dp_tools/utils/: __init__.py  accession.py  file_utils.py  isa_archive.py  logging.py  move.py  mover.py
plugins/rnaseq/: config.yaml  raw_reads.py
tests/: test_glds_api.py  test_loaders.py  test_scripts.py  test_validation.py
