[project]
name = "dp-tools"
version = "2.0.0"
description = "Python package for VVing datasets and other misc DP tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests",
        "pyyaml",
        "pandas>=2.2.3",
        "tabulate",
        "click",
        "loguru",
        "multiqc>=1.27"]
authors = [
  {name = "Jonathan Oribello", email = "jonathan.d.oribello@gmail.com"},
  {name = "Alexis Torres", email = "lextorres46@gmail.com"}
]
maintainers = [
  {name = "Alexis Torres", email = "lextorres46@gmail.com"}
]
